# uwgpu

./: .gitignore  CITATION.cff  Cargo.toml  README.md  flake.nix  rustfmt.toml
.cargo/: config.toml
crates/microbenchmarks/: Cargo.toml  README.md
crates/microbenchmarks-cli/: Cargo.toml  README.md
crates/microbenchmarks-cli/src/: cli.rs  main.rs  print_results.rs
crates/microbenchmarks/src/: lib.rs  wasm.rs
crates/microbenchmarks/src/convolution/: convolution.wgsl  mod.rs
crates/microbenchmarks/src/matmul/: mod.rs
crates/microbenchmarks/src/memcpy/: buffer_to_buffer.rs  buffer_to_texture.rs  buffer_to_texture.wgsl  mod.rs  texture_to_texture.rs  texture_to_texture.wgsl
crates/microbenchmarks/src/memory/: buffer_sequential.rs
crates/microbenchmarks/src/reduction_sum/: mod.rs  reduction_sum.wgsl
crates/microbenchmarks/src/scan/: mod.rs  scan.wgsl
crates/uwgpu/: Cargo.toml  README.md
crates/uwgpu/src/: gpu.rs  lib.rs  pipeline.rs
crates/web-server/: Cargo.toml  README.md
crates/web-server/.sqlx/: query-4d71cde97f372163ee9ad12c47773d0f349c6ab05384ddee2187f4c8af75afbd.json  query-75fd956426a4f1b54c90f3327e9f0d4cbc64fcd2c15442b9aba237e950216f68.json  query-9cd3013b646986a05bac0dd6d893954d7176e1e490816b74233dca7d5c662e3e.json  query-e5079ce6c9d21f25def541df821215e985de9985e5b6696ad60aaea9ecd92f87.json
crates/web-server/migrations/: 20241017031408_create_uuid_ossp_extension.down.sql  20241017031423_create_wgpu_adapter_info_table.down.sql  (+6 more)
diseño/: diseño.md
diseño/diagramas/: Composition Diagram.drawio  Interfaces Diagram.drawio  Logic Diagram.drawio  UML Casos de Uso.drawio
informes/informe1/: informe.md
informes/informe2/: README.md  custom-template.tex  informe.md
informes/informe3/: informe.md
informes/plantilla/: custom-template.tex  informe.md
microbenchmarks/: Cargo.toml  README.md
microbenchmarks-cli/: Cargo.toml
microbenchmarks-cli/src/: cli.rs  main.rs  print_error.rs  print_results.rs
microbenchmarks/src/: lib.rs  main.rs  wasm.rs
microbenchmarks/src/matmul/: matmul.wgsl  mod.rs
microbenchmarks/src/memory/: buffer_sequential.rs  buffer_sequential.wgsl  mod.rs
plan de proyecto/: custom-template.tex  plan_de_proyecto.md
requerimientos/: custom-template.tex  requerimientos.md
requerimientos/figuras/: Diagrama Plataformas-Hardware.drawio
school/: README.md
school/diseño/: README.md  custom-template.tex  diseño.md
school/plan de proyecto/: README.md
school/requerimientos/: README.md  requerimientos.md
uwgpu/: Cargo.toml  README.md
uwgpu/src/: adapter_info.rs  gpu.rs  lib.rs  main.rs  pipeline.rs  shader.wgsl  wasm_utils.rs
web-server/: Cargo.toml  README.md
web-server/.sqlx/: query-0d462eed2ae854301f8bb425197f257e59f48cba67125bb6a941052da8c886d6.json  query-1132b6dbcd0f1879daeda0bd6bd706fff6499d3618899e0f6dcb64aeecb20c63.json  query-26679c047dfd934a80dd0ae63b5bbcbc0a38bc1142146002891c392d5470727c.json  query-46386b72d577f0f049c4b8978323392a6e6294cd8faf76c9f550de675da32eff.json  query-53d2ae53181d345687aa47e300931d41162c418bdef1fd25c4a26b01c5186a51.json  query-646bb19dd89b0efd95b1333666e95083f2b9c6db8fe85c3e5c2620d21bf136ae.json  query-69c579cc77b361b9aeb2f4139e9c31c1a420e94210261156068a76b2bab1ca9a.json  query-7f7a154fea8a52d084dbd78f03ba37227057673f5c431ab9ba6c64551c5c2d7e.json  query-9a48bb76f4253a92361ec7b241cd724dd096f00447026695593a4af98ff04b75.json  query-9eba300d165d00a0905c3bb33866e87a927da49f32e98c4f451fa5ab786a165d.json  query-b4df5ec45702db5a77819ec76b2a3b604de9b6ae156b73712728a1005872d45a.json  query-bfbb7856c791fa5ba0912b4dc38421142ce1deb3816343bcbeae2579d6685c96.json  query-de5c66cb232189d61a1bb7fc01ee33efff048bda26f7487e89835f36d09db424.json  query-eb66657ec79148f6a32fc433474c7d074a30f58e085eb4e9e1c53fb610762842.json  query-f2872d4bebb8c395111b051b16dad48bdaa9d7ab0286d063bdf07b98e212d047.json  query-fbebfd2562c1708073119ccd41e027fcab648131db87d47db1d21fdb21d90109.json
web-server/migrations/: 20241017031408_create_uuid_ossp_extension.up.sql  20241017031423_create_wgpu_adapter_info_table.down.sql  20241017031423_create_wgpu_adapter_info_table.up.sql  20241017180241_create_user_agent_os_table.down.sql  20241017180241_create_user_agent_os_table.up.sql  20241017182423_create_user_agent_device_table.down.sql  20241017182423_create_user_agent_device_table.up.sql  20241017184417_create_user_agent_table.down.sql  20241017184417_create_user_agent_table.up.sql  20241017185219_create_user_agent_string_info_table.up.sql  20241017190633_create_webgpu_adapter_info_table.up.sql  20241017192029_create_platform_table.down.sql  20241017192029_create_platform_table.up.sql  20241017195250_create_computational_benchmark_info_table.down.sql  20241017195250_create_computational_benchmark_table.up.sql  20241017195419_create_memory_benchmark_table.down.sql  20241017195419_create_memory_benchmark_table.up.sql  20241017200306_create_benchmark_results_table.down.sql  20241017200306_create_benchmark_results_table.up.sql
web-server/public/: colors.css  stylesheet.css
web-server/src/: api_types.rs  app_config.rs  components.rs  data_store.rs  error.rs  lib.rs  main.rs  routes.rs
web-server/src/components/: benchmark_page.rs  css.rs  historical_data.rs  navbar.rs
web-server/src/data_store/: benchmark_results.rs  non_empty_string.rs  platform.rs  platform_info.rs
web-server/src/data_store/benchmark_results/: computational.rs  interface.rs  memory.rs
web-server/src/data_store/platform/: interface.rs  webgpu_adapter_info.rs  wgpu_adapter_info.rs
web-server/src/data_store/platform_info/: user_agent_info.rs  webgpu_adapter_info.rs  wgpu_adapter_info.rs
web-server/src/routes/: hardware_options.rs  historic_data_table.rs  home.rs  microbenchmark_page.rs  not_found.rs  os_options.rs  placeholder.rs  post_results.rs
web-server/src/routes/extractors/: layout.rs
(+35 files in other folders)
