[package]
name = "microbenchmarks"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
serde = ["uwgpu/serde"]

[dependencies]
uwgpu = { path = "../uwgpu" }
bytemuck = { workspace = true }
rand = "0.8.5"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
