[package]
name = "uwgpu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }

cfg-if = "1"

winit = { version = "0.29", features = ["rwh_05"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Lightweight async runtime para probar el main
pollster = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
