[package]
name = "uwgpu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
spirv = ["wgpu/spirv"]
naga-ir = ["wgpu/naga-ir"]
serde = ["wgpu/serde"]

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }

# TODO: this after moving WASM stuff to web crate
cfg-if = "1"
wgpu-async = "22.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
web-sys = "0.3"
