[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[features]
default = [ "debug" ]
debug = [ "axum/macros", "log", "tracing-subscriber" ]

[dependencies]
axum = "0.7"
maud = { version = "0.26", features = ["axum"] }
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid"] }
chrono = "0.4"
uwgpu = { path = "../uwgpu", features = ["serde"] }
async-trait = "0.1"
ua-parser = { version = "0.2", git = "https://github.com/zkwinkle/uap-rust-clone-fork.git" }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9"

# Optional dependencies
log = { workspace = true, optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }
