[package]
name = "uwgpu"
version = "0.1.0"
edition = "2021"

[features]
spirv = ["wgpu/spirv"]
naga-ir = ["wgpu/naga-ir"]
serde = ["wgpu/serde", "dep:serde"]
wasm = ["serde", "dep:web-sys", "dep:wasm-bindgen", "dep:serde-wasm-bindgen"]

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
wgpu-async = "22.1.0"
thiserror = { workspace = true }

# TODO: Figure out what to do about the error panic hook and other stuff
serde = { version = "1.0", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.4", optional = true }
cfg-if = "1"
web-sys = { version = "0.3", features = ["console"], optional = true }
wasm-bindgen = { workspace = true, optional = true }
